--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
           <a href="#skills">Skills</a>
           <a href="#projects">Projects</a>
           <a href="#experience">Experience</a>
-          <a href="#contact">Contactor</a>
+          <a href="#contact">Contact</a>
         </nav>
       </div>
     </div>
