--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
     <div class="container">
       <div class="hero-container">
         <h1>Cassandra Peterson</h1>
-        <h2>Software  in Training at <span class="typewriter">TripleTen</span></h2>
+        <h2>Software Engineer in Training at <span class="typewriter">TripleTen</span></h2>
         <p>I build creative, responsive websites with clean code and seamless user experiences</p>
         <div class="hero-btns">
           <a href="#contact" class="btn btn-primary">Get in Touch</a>
